fix: Adjust border-radius for first and last items in vertical ToggleGroup.

--- a/packages/ui/src/components/toggle-group/ToggleGroupItem.astro
+++ b/packages/ui/src/components/toggle-group/ToggleGroupItem.astro
@@ -58,8 +58,8 @@ const {
     // Connected items styling (rounded-none, first/last get border-radius)
     "rounded-none shadow-none first:rounded-l-lg last:rounded-r-lg",
     // Vertical orientation border-radius
-    "group-data-[orientation=vertical]/toggle-group:first:rounded-t-lg group-data-[orientation=vertical]/toggle-group:first:rounded-l-none",
-    "group-data-[orientation=vertical]/toggle-group:last:rounded-b-lg group-data-[orientation=vertical]/toggle-group:last:rounded-r-none",
+    "group-data-[orientation=vertical]/toggle-group:first:rounded-t-lg group-data-[orientation=vertical]/toggle-group:first:rounded-bl-none",
+    "group-data-[orientation=vertical]/toggle-group:last:rounded-b-lg group-data-[orientation=vertical]/toggle-group:last:rounded-tr-none",
     // Outline variant border handling (horizontal)
     "group-data-[variant=outline]/toggle-group:border-l-0 group-data-[variant=outline]/toggle-group:first:border-l",
     // Outline variant border handling (vertical)
