fix(ui): improve focus

--- a/packages/ui/src/components/combobox/Combobox.astro
+++ b/packages/ui/src/components/combobox/Combobox.astro
@@ -6,7 +6,7 @@
  *
  * @preview
  * <Combobox class="w-[200px]">
- *   <ComboboxInput placeholder="Select framework..." />
+ *   <ComboboxInput placeholder="Select framework..." showClear />
  *   <ComboboxContent>
  *     <ComboboxList>
  *       <ComboboxEmpty>No results found.</ComboboxEmpty>
