--- a/packages/ui/src/components/combobox/ComboboxContent.astro
+++ b/packages/ui/src/components/combobox/ComboboxContent.astro
@@ -14,8 +14,8 @@ type Props = {
 const {
   class: className = "",
   side = "bottom",
-  align = "start",
-  sideOffset = 4,
+  align = "center",
+  sideOffset = 6,
   alignOffset = 0,
   ...rest
 } = Astro.props as Props;
