--- a/packages/ui/src/components/input/Input.astro
+++ b/packages/ui/src/components/input/Input.astro
@@ -81,13 +81,13 @@ import { cva, type VariantProps } from "class-variance-authority";
 import type { HTMLAttributes } from "astro/types";
 
 const inputVariants = cva(
-  "dark:bg-input/30 border-input focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 disabled:bg-input/50 dark:disabled:bg-input/80 rounded-lg border bg-transparent transition-colors file:h-6 file:text-sm file:font-medium focus-visible:ring-3 aria-invalid:ring-3 file:text-foreground placeholder:text-muted-foreground w-full min-w-0 outline-none file:inline-flex file:border-0 file:bg-transparent disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50",
+  "dark:bg-input/30 border-input focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:aria-invalid:border-destructive/50 disabled:bg-input/50 dark:disabled:bg-input/80 rounded-lg border bg-transparent text-base transition-colors file:h-6 file:text-sm file:font-medium focus-visible:ring-3 aria-invalid:ring-3 file:text-foreground placeholder:text-muted-foreground w-full min-w-0 outline-none file:inline-flex file:border-0 file:bg-transparent disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50",
   {
     variants: {
       size: {
-        sm: "h-8 px-2.5 py-1 text-xs",
-        default: "h-9 px-3 py-1 text-sm",
-        lg: "h-10 px-3.5 py-1.5 text-base",
+        sm: "h-8 px-2.5 py-1 md:text-xs",
+        default: "h-9 px-3 py-1 md:text-sm",
+        lg: "h-10 px-3.5 py-1.5 md:text-base",
       },
     },
     defaultVariants: {
