feat: add max-width

--- a/apps/web/src/components/UiDemo.astro
+++ b/apps/web/src/components/UiDemo.astro
@@ -217,7 +217,7 @@ const countries = [
 ---
 
 <section
-  class="not-content relative z-10 max-w-7xl lg:max-w-full pt-0 px-0 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-10"
+  class="not-content relative z-10 max-w-[96rem] pt-0 px-0 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4 gap-10"
 >
   <!-- LEFT COLUMN -->
   <div class="space-y-6">
