--- a/apps/web/src/pages/index.astro
+++ b/apps/web/src/pages/index.astro
@@ -53,7 +53,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     },
   }}
 >
-  <div class="md:max-w-[92%] mx-auto">
+  <div class="max-w-[96rem] mx-auto">
     <UiDemo />
   </div>
   <!-- 
@@ -139,7 +139,7 @@ import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
     opacity: 1;
     transform-origin: left center;
 
-    @apply px-0 lg:px-4 pt-12 pb-10 lg:pb-18 z-10 md:max-w-[92%] mx-auto relative;
+    @apply px-0 lg:px-4 pt-12 pb-10 lg:pb-18 z-10 max-w-[96rem] mx-auto relative;
   }
 
   @media (min-width: 48rem) {
